--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-scrapy==2.5.0
+scrapy==2.4.0
 scrapyd==1.2.1
 sentry-sdk==1.3.1
+scrapyd-client==1.2.0a1
+git+https://github.com/scrapy/scrapyd-client
