--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ scrapy==2.4.0
 scrapyd==1.2.1
 sentry-sdk==1.3.1
 scrapyd-client==1.2.0a1
+shub==2.13.0
 git+https://github.com/scrapy/scrapyd-client
