Create authenticated scrapyd server

--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -7,6 +7,8 @@
 default = tutorial.settings
 
 [deploy]
-url = http://localhost:6800/
 project = tutorial
+url = http://localhost:6800/
+username = quotes-deployer
+password = test
 version = GIT
