Deploy spider to authenticated scrapyd server

--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -8,7 +8,8 @@ default = tutorial.settings
 
 [deploy]
 project = tutorial
-url = http://localhost:6800/
+#Replace with droplet IP address as
+url = http://46.101.96.30:6800/
 username = quotes-deployer
 password = test
 version = GIT
