--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
       - 'master'
 
 jobs:
-  docker:
+  scrapyd_image:
     runs-on: ubuntu-latest
     steps:
       -
@@ -16,9 +16,10 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
       -
-        name: Build and push
+        name: Build and push scrapyd server
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          file: scrapyd/Dockerfile
           push: true
           tags: deanrobertcook/quotes-scrapyd:latest
