--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,17 +9,28 @@ jobs:
   scrapyd_image:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
-      -
-        name: Build and push scrapyd server
+
+      - name: Build and push scrapyd server
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           file: scrapyd/Dockerfile
           push: true
           tags: deanrobertcook/quotes-scrapyd:latest
+
+      - name: Run scrapyd on the droplet
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DROPLET_HOST }}
+          username: ${{ secrets.DROPLET_USERNAME }}
+          password: ${{ secrets.DROPLET_PASSWORD }}
+          script: docker run \
+            -p 6800:6800 \
+            -v scrapyd:/scrapyd \
+            -v /usr/local/lib/python3.7/dist-packages \
+            deanrobertcook/quotes-scrapyd:latest
