--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,19 +9,19 @@ jobs:
   scrapyd_image:
     runs-on: ubuntu-latest
     steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+      # - name: Login to DockerHub
+      #   uses: docker/login-action@v1 
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
-      - name: Build and push scrapyd server
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          file: scrapyd/Dockerfile
-          push: true
-          tags: deanrobertcook/quotes-scrapyd:latest
+      # - name: Build and push scrapyd server
+      #   id: docker_build
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     file: scrapyd/Dockerfile
+      #     push: true
+      #     tags: deanrobertcook/quotes-scrapyd:latest
 
       - name: Run scrapyd on the droplet
         uses: appleboy/ssh-action@master
@@ -29,8 +29,6 @@ jobs:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USERNAME }}
           password: ${{ secrets.DROPLET_PASSWORD }}
-          script: docker run \
-            -p 6800:6800 \
-            -v scrapyd:/scrapyd \
-            -v /usr/local/lib/python3.7/dist-packages \
-            deanrobertcook/quotes-scrapyd:latest
+          script: |
+            docker rm -f scrapyd || true
+            docker run --name scrapyd -p 6800:6800 -v scrapyd:/scrapyd -v /usr/local/lib/python3.7/dist-packages deanrobertcook/quotes-scrapyd:latest
