Add environment variables to scrapyd build

--- a/scrapyd/Dockerfile
+++ b/scrapyd/Dockerfile
@@ -10,6 +10,18 @@
 
 FROM ubuntu:18.04
 
+# Set "fixed" arguments to be envvars available to the scrapy instance
+# USERNAME and PASSWORD are needed to enable HTTP basic auth
+ARG USERNAME
+ENV USERNAME=${USERNAME}
+
+ARG PASSWORD
+ENV PASSWORD=${PASSWORD}
+
+# Example of variable to be used by the app
+ARG RELEASE_VERSION
+ENV RELEASE_VERSION=${RELEASE_VERSION:-latest}
+
 # install Ubuntu packages
 ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update -qq \
