--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,19 +9,22 @@ jobs:
   scrapyd_image:
     runs-on: ubuntu-latest
     steps:
-      # - name: Login to DockerHub
-      #   uses: docker/login-action@v1 
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
-      # - name: Build and push scrapyd server
-      #   id: docker_build
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     file: scrapyd/Dockerfile
-      #     push: true
-      #     tags: deanrobertcook/quotes-scrapyd:latest
+      - name: Build and push scrapyd server
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          file: scrapyd/Dockerfile
+          build-args: |
+            USERNAME=${{ secrets.SCRAPYD_DEPLOYER_USERNAME }}
+            PASSWORD=${{ secrets.SCRAPYD_DEPLOYER_PW }}
+          push: true
+          tags: deanrobertcook/quotes-scrapyd:latest
 
       - name: Run scrapyd on the droplet
         uses: appleboy/ssh-action@master
