Add tests for required build args

--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -8,7 +8,7 @@ default = tutorial.settings
 
 [deploy]
 project = tutorial
-#Replace with droplet IP address as
+#Replace with droplet IP address as necessary
 url = http://46.101.96.30:6800/
 username = quotes-deployer
 password = test
