Pass in environment variables to Dockerfile

--- a/scrapyd/Dockerfile
+++ b/scrapyd/Dockerfile
@@ -24,6 +24,9 @@ ENV PASSWORD $PASSWORD
 ARG RELEASE_VERSION
 ENV RELEASE_VERSION=${RELEASE_VERSION:-latest}
 
+ARG ENVIRONMENT
+ENV ENVIRONMENT=${ENVIRONMENT:-local}
+
 # install Ubuntu packages
 ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update -qq \
