--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,18 @@ jobs:
         with:
           images: deanrobertcook/quotes-scrapyd
 
+      # We could use these variables to build the docker tag ourselves, but 
+      # I'll leave both steps here for now as a demonstration
+      # TODO: It'd be worth learning more about Go templates to add a bit of logic
+      # e.g. ${{ if steps.vars.outputs.branch == 'master' 'prod' else 'staging' }}, if that's
+      # possible. 
+      - name: Declare build variables to be passed
+        id: vars
+        shell: bash
+        run: |
+          echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+
       - name: Build and push scrapyd server
         id: docker_build
         uses: docker/build-push-action@v2
@@ -29,6 +41,8 @@ jobs:
           build-args: |
             USERNAME=${{ secrets.SCRAPYD_DEPLOYER_USERNAME }}
             PASSWORD=${{ secrets.SCRAPYD_DEPLOYER_PW }}
+            RELEASE=${{ steps.vars.outputs.sha_short }}
+            ENVIRONMENT=${{ steps.vars.outputs.branch }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
 
