--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -10,6 +10,6 @@ default = tutorial.settings
 project = tutorial
 #Replace with droplet IP address as necessary
 url = http://46.101.96.30:6800/
-username = quotes-deployer
-password = test
+username = secrets.SCRAPYD_DEPLOYER_USERNAME
+password = secrets.SCRAPYD_DEPLOYER_PW
 version = GIT
