Add missing backslash

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
 
       - name: Run scrapyd on the droplet
-        uses: appleboy/ssh-action@v0.1.4
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USERNAME }}
@@ -61,10 +61,10 @@ jobs:
                     docker stop "${id}"
                 fi
             done
-            docker image rm -f ${{ steps.meta.outputs.tags }} || true
+            docker image rm -f ${{ steps.meta.outputs.tags }} || true 
             docker run -d -p 6800:6800 \ 
               -e USERNAME=${{ secrets.SCRAPYD_DEPLOYER_USERNAME }} \ 
-              -e PASSWORD=${{ secrets.SCRAPYD_DEPLOYER_PW }}
+              -e PASSWORD=${{ secrets.SCRAPYD_DEPLOYER_PW }} \ 
               -v scrapyd:/scrapyd \ 
               -v /usr/local/lib/python3.7/dist-packages \ 
               ${{ steps.meta.outputs.tags }}
