--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,9 @@ jobs:
           # Removing the image is a bit of a hack, since the droplet's Docker can't know if a locally
           # stored image is out of date from latest version on the Dockerhub repo. Just remove and 
           # re-download for now. 
+          # 
+          # I can't for the life of me figure out how multiline commands work here. 
+          # It should work: https://github.com/appleboy/ssh-action/issues/75
           script: |
             for id in $(docker ps -q)
             do
@@ -62,12 +65,7 @@ jobs:
                 fi
             done
             docker image rm -f ${{ steps.meta.outputs.tags }} || true 
-            docker run -d -p 6800:6800 \ 
-              -e USERNAME=${{ secrets.SCRAPYD_DEPLOYER_USERNAME }} \ 
-              -e PASSWORD=${{ secrets.SCRAPYD_DEPLOYER_PW }} \ 
-              -v scrapyd:/scrapyd \ 
-              -v /usr/local/lib/python3.7/dist-packages \ 
-              ${{ steps.meta.outputs.tags }}
+            docker run -d -p 6800:6800 -e USERNAME=${{ secrets.SCRAPYD_DEPLOYER_USERNAME }} -e PASSWORD=${{ secrets.SCRAPYD_DEPLOYER_PW }} -v scrapyd:/scrapyd -v /usr/local/lib/python3.7/dist-packages ${{ steps.meta.outputs.tags }}
 
       # - name: checkout repo content
       #   uses: actions/checkout@v2 # checkout the repository content to github runner.
