--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
           echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
           echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
-      - name: Build and push scrapyd server
+      - name: Build and push scrapyd image
         id: docker_build
         uses: docker/build-push-action@v2
         with:
